--- a/README.org
+++ b/README.org
@@ -1,2 +1,1 @@
-The Rules for Data Processing Pipeline Builders (published in English)
-
+The Rules for Data Processing Pipeline Builders (published in [[https://habr.com/ru/company/badoo/blog/531912/][English]])
